<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FFF0"
    tools:context=".Knee_desc">

    <ImageView
        android:id="@+id/ivKneeWomen"
        android:layout_width="402dp"
        android:layout_height="235dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/high_knee_woman" />

    <TextView
        android:id="@+id/introBnfitKnee"
        android:layout_width="190dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/highKneeDefinition"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivKneeWomen" />

    <TextView
        android:id="@+id/defKneeAns"
        android:layout_width="363dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/defHighKnee"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introBnfitKnee" />

    <TextView
        android:id="@+id/bnftKneeQuestion"
        android:layout_width="356dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/kneeBnftQuestion"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defKneeAns" />

    <TextView
        android:id="@+id/bnftKnee1"
        android:layout_width="367dp"
        android:layout_height="126dp"
        android:layout_marginTop="4dp"
        android:text="@string/bnftOfKnee1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bnftKneeQuestion" />

    <TextView
        android:id="@+id/bnftKnee2"
        android:layout_width="371dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        android:text="@string/bnftOfKnee2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bnftKnee1" />

</androidx.constraintlayout.widget.ConstraintLayout>