<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FFF0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="402dp"
        android:layout_height="235dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mountain_climber" />

    <View
        android:id="@+id/dividertgh"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="77dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividertgh">

        <ImageButton
            android:id="@+id/ibHighKnee"
            android:layout_width="208dp"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/btn_highknee" />

        <Button
            android:id="@+id/btnKnee"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:backgroundTint="#5D6C61"
            android:text="@string/btnSkipping" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbHighKnee"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="411dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:scaleY="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbHighKnee">

        <ImageButton
            android:id="@+id/ibPlank"
            android:layout_width="185dp"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/plank_2_btn" />

        <Button
            android:id="@+id/btnPlank"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:backgroundTint="#5D6C61"
            android:text="@string/btnPlank" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbPlank"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="411dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:scaleY="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbPlank">

        <ImageButton
            android:id="@+id/ibMountainClimber"
            android:layout_width="220dp"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/mountain_climber_btn" />

        <Button
            android:id="@+id/btnMountainClimber"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:backgroundTint="#5D6C61"
            android:text="@string/btnMountainClimber" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbMClimber"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="411dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:scaleY="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>